Added moment for formating dates.

--- a/webroot/html/includes/components/chart.hbs
+++ b/webroot/html/includes/components/chart.hbs
@@ -1,2 +1,2 @@
-<canvas id="temperatureChart" width="1000px" height="200px"></canvas>
-<canvas id="humidityChart" width="1000px" height="200px"></canvas>
+<canvas class="c_chart" id="temperatureChart" height="200" width="960"></canvas>
+<canvas class="c_chart" id="humidityChart" height="200" width="960"></canvas>
