Added current temp and humid. And styling

--- a/webroot/html/includes/components/chart.hbs
+++ b/webroot/html/includes/components/chart.hbs
@@ -1,2 +1,7 @@
-<canvas class="c_chart" id="temperatureChart" height="200" width="960"></canvas>
-<canvas class="c_chart" id="humidityChart" height="200" width="960"></canvas>
+<div class="c_chart-container">
+	<h2>Temperature</h2>
+	<canvas class="c_chart" id="temperatureChart" height="400" width="1500"></canvas>
+
+	<h2>Humidity</h2>
+	<canvas class="c_chart" id="humidityChart" height="400" width="1500"></canvas>
+</div>
