--- a/webroot/html/includes/document_header.hbs
+++ b/webroot/html/includes/document_header.hbs
@@ -35,9 +35,9 @@
 
 	<!-- Fav and touch icons-->
 	<link rel="shortcut icon" href="" />
-	<link rel="apple-touch-icon-precomposed" href="//www.cbb.dk/images/cbb/apple-touch-icon.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="//www.cbb.dk/images/cbb/apple-touch-icon-114x114-precomposed.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="//www.cbb.dk/images/cbb/apple-touch-icon-144x144-precomposed.png" />
+	<!--<link rel="apple-touch-icon-precomposed" href="//www.cbb.dk/images/cbb/apple-touch-icon.png" />-->
+	<!--<link rel="apple-touch-icon-precomposed" sizes="114x114" href="//www.cbb.dk/images/cbb/apple-touch-icon-114x114-precomposed.png" />-->
+	<!--<link rel="apple-touch-icon-precomposed" sizes="144x144" href="//www.cbb.dk/images/cbb/apple-touch-icon-144x144-precomposed.png" />-->
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
