--- a/webroot/html/pages/index.hbs
+++ b/webroot/html/pages/index.hbs
@@ -1,6 +1,8 @@
-<header class="c_row">
-	<div class="column small-12 text-center">
-        <h1>Dashboard</h1>
+<header class="c_row full-width">
+	<div class="c_row">
+		<div class="column small-12 text-center">
+			<h1>Dashboard</h1>
+		</div>
 	</div>
 </header>
 
