--- a/webroot/html/includes/components/chart.hbs
+++ b/webroot/html/includes/components/chart.hbs
@@ -1,7 +1,8 @@
+<h2>Temperature</h2>
 <div class="c_chart-container">
-	<h2>Temperature</h2>
 	<canvas class="c_chart" id="temperatureChart" height="400" width="1500"></canvas>
-
-	<h2>Humidity</h2>
+</div>
+<h2>Humidity</h2>
+<div class="c_chart-container">
 	<canvas class="c_chart" id="humidityChart" height="400" width="1500"></canvas>
 </div>
